--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-3.yml
@@ -193,3 +193,14 @@ notes:
     Back: |
       $8$
     Annotations: ''
+- id: 1546217046731
+  tags: []
+  fields:
+    Front: |
+      CCAC 02.3 17: Evaluate the limit, if it exists.
+      $$
+      \lim_{x\to -2}\frac{x+2}{x^3 + 8}
+      $$
+    Back: |
+      $\frac{1}{12}$
+    Annotations: ''
