--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/01-Review.yml
@@ -50,8 +50,7 @@ notes:
       2.7
       $$
     Annotations: Fix me:<div>- The plot is too tall. It should have a max of 4.</div>
-  tags:
-  - ann:fix-me
+  tags: []
 - id: 1543449293019
   useMarkdown: pweave
   fields:
@@ -91,8 +90,11 @@ notes:
       $$
       2.3, \ 5.6
       $$
-    Annotations: ''
-  tags: []
+    Annotations: Issues:<div>- Only identified one of the values. Wasn't thinking.</div><div><br></div><div>Fixes:</div><div>-
+      Read directions more carefully before problem, and again to verify after solution.</div><div>-
+      Horizontal line.</div>
+  tags:
+  - ann:trouble
 - id: 1543449296598
   useMarkdown: pweave
   fields:
@@ -312,7 +314,10 @@ notes:
       CCAC 01.Review 05: Find the domain and range of the function $f(x) = 2/(3x - 1)$. Write your answer in interval notation.
     Back: |
       $(-\infty, \frac{1}{3}) \cup (\frac{1}{3}, \infty), \ (-\infty, 0) \cup (0, \infty)$
-    Annotations: ''
+    Annotations: Minor issues:<div>- Should have answered in interval notation, but
+      answered with set notation instead.</div>
+  tags:
+  - ann:minor-trouble
 - id: 1543450755369
   fields:
     Front: |
@@ -649,7 +654,10 @@ notes:
       CCAC 01.Review 23: If $f(x) = 2x + \ln{x}$, find $f^{-1}(2)$.
     Back: |
       $1$.
-    Annotations: ''
+    Annotations: Thoughts:<div>- Solving for \(x\) looks tough.</div><div>- OTOH,
+      \(\ln(1) = 0\), whence \(f(1) = 2\), so \(f^{-1}(2) = 1\).</div>
+  tags:
+  - ann:hard
 - id: 1543451770544
   fields:
     Front: |
