--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-4.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-4.yml
@@ -9,3 +9,13 @@ defaults:
   - CCAC-02-LimitsAndDerivatives
   - CCAC-02.4-Continuity
   markdownTabLength: 2
+notes:
+- id: 1546883537046
+  fields:
+    Front: |
+      CCAC 02.4 01: Write an equation that expresses the fact that a function $f$ is continuous at the number $4$.
+    Back: |
+      $$
+      \lim_{x\to 4}f(x) = f(4).
+      $$
+    Annotations: ''
