--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-4.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-4.yml
@@ -19,3 +19,57 @@ notes:
       \lim_{x\to 4}f(x) = f(4).
       $$
     Annotations: ''
+- id: 1546883537207
+  useMarkdownMathExt: false
+  useMarkdown: pweave
+  fields:
+    Front: >
+      CCAC 02.4 09: A parking lot charges $3 for the first hour (or part of an hour)
+      and $2 for each succeeding hour (or part), up to a daily maximum of $10.
+
+      a. Sketch a graph of the cost of parking at this lot as a function of the time
+      parked there.
+
+      b. Discuss the discontinuities of this function and their significance to some
+      who parks in the lot.
+    Back: |
+      a.
+      ```{python echo = False}
+      import matplotlib.pyplot as plt
+      import sympy as sy
+
+      import math
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        (3, (x, 0, 1)),
+        (5, (x, 1, 2)),
+        (7, (x, 2, 3)),
+        (9, (x, 3, 4)),
+        (10, (x, 4, 10)),
+        xlim = (-1, 10), ylim = (-1, 11),
+        xlabel = 'Cost (dollars)', ylabel = 'Time (hours)',
+        show = False,
+      )
+
+      if hasattr(p, '_backend'): p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+      p._backend.process_series()
+      ax.plot(0, 3, 'ko', markerfacecolor = 'white', markersize = 5)
+      ax.plot(1, 3, 'ko', markersize = 5)
+      ax.plot(1, 5, 'ko', markerfacecolor = 'white', markersize = 5)
+      ax.plot(2, 5, 'ko', markersize = 5)
+      ax.plot(2, 7, 'ko', markerfacecolor = 'white', markersize = 5)
+      ax.plot(3, 7, 'ko', markersize = 5)
+      ax.plot(3, 9, 'ko', markerfacecolor = 'white', markersize = 5)
+      ax.plot(4, 9, 'ko', markersize = 5)
+      ax.plot(4, 10, 'ko', markerfacecolor = 'white', markersize = 5)
+      p._backend.plt.show()
+      ```
+      b. Discontinuities at \\(t=1,\ 2,\ 3,\ 4\\).
+    Annotations: ''
+  tags: []
