--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-4.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-4.yml
@@ -255,3 +255,56 @@ notes:
       1
       $$
     Annotations: ''
+- id: 1546888537446
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 02.4 33: Find the numbers at which the function
+      $$
+      f(x) =
+      \begin{cases}
+        x + 2 & \text{if $x < 0$} \\
+        e^x & \text{if $0 \leq x \leq 1$} \\
+        2 - x & \text{if $1 < x$} \\
+      \end{cases}
+      $$
+      is discontinuous. At which of these points is $f$ continuous from the right, from the left, or neither? Sketch the graph of $f$.
+    Back: |
+      $0$, right; $1$, left;
+      ```{python echo = False}
+      import matplotlib.pyplot as plt
+      import sympy as sy
+
+      import math
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        (x + 2, (x, -3, 0)),
+        (sy.exp(x), (x, 0, 1)),
+        (2 - x, (x, 1, 3)),
+        xlabel = '$x$', ylabel = '$y$',
+        show = False,
+      )
+
+      if hasattr(p, '_backend'): p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+      p._backend.process_series()
+      ax.plot(0, 1, 'ko', markersize = 5)
+      ax.plot(0, 2, 'ko', markerfacecolor = 'white', markersize = 5)
+      ax.plot(1, math.e, 'ko', markersize = 5)
+      ax.plot(1, 1, 'ko', markerfacecolor = 'white', markersize = 5)
+      ax.text(-0.6, 2, '$(0, 2)$')
+      ax.text(-0.6, 1, '$(0, 1)$')
+      ax.text(1.2, math.e, '$(1, e)$')
+      ax.text(1.2, 1, '$(1, 1)$')
+      ax.set_xlim(-3, 3)
+      ax.set_ylim(-1, 3)
+      ax.set_xticks([0])
+      ax.set_yticks([0])
+      p._backend.plt.show()
+      ```
+    Annotations: ''
